--- a/blue.html
+++ b/blue.html
@@ -9,5 +9,8 @@ initial-scale=1. 0">
 <body>
 	<h1 style="color: #00f">파란색 페이 지</h1>
 	<p>파란색은 하늘색이 다.</p>
+	<p>
+		<a href="index.html">홈페이 지 로 이 동</a>
+	</p>
 </body>
 </html>
