--- a/crazy.html
+++ b/crazy.html
@@ -8,12 +8,18 @@ initial-scale=1. 0">
 </head>
 <body>
 	<h1>엄 청난 모험</h1>
+	<p>저기 무지 개를 봐!</p>
+	<ul>
+		<li style="color: red">빨</li>
+		<li style="color: orange">주</li>
+		<li style="color: yellow; background-color: navy">노</li>
+		<li style="color: green">초</li>
+		<li style="color: blue">파</li>
+		<li style="color: indigo">남</li>
+		<li style="color: violet">보</li>
+	</ul>
 	<p>
-		거이 성공할 수 없을 것 같은<span style="color: #F0F">개발 모험</span><span
-			style="color: #06C">실험</span>!
-	</p>
-	<p>
-		<a href="index. html">홈페이 지 로 이 동</a>
+		<a href="index.html">홈페이 지 로 이 동</a>
 	</p>
 </body>
 </html>
