html 파일들에 css 파일 연결

--- a/orange.html
+++ b/orange.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,
 initial-scale=1. 0">
 <title>주황 사이 트</title>
+<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 	<h1 style="color: #F90">주황색 페이 지</h1>
