--- a/blue.html
+++ b/blue.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,
 initial-scale=1. 0">
 <title>파란 사이 트</title>
+<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 	<h1 style="color: #00f">파란색 페이 지</h1>
