무지개 페이지 링크 추가

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>화려한 사이 트</title>
-<link rel="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 	<h1 style="color: #07F">화려한 색상의 사이 트</h1>
@@ -18,6 +18,7 @@
 		<li style="color: #F90; font-weight: bold"><a href="orange.html">귤색
 				페이지</a></li>
 		<li style="color: #00F"><a href="blue.html">파란 페이지</a></li>
+		<li><ahref="rainbow.html">무지개 페이지 </a></li>
 	</ul>
 </body>
 </html>
