--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<p>이 사이 트는 색상에 관한 것이 다.</p>
 	<h2 style="color: #c00">뉴스</h2>
 	<ul>
-		<li>아무일도 없다(아직)</li>
+		<li><a href="rainbow.html">새로운무지개 </a></li>
 	</ul>
 	<h2>파도타기</h2>
 	<ul>
