--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	</ul>
 	<h2>파도타기</h2>
 	<ul>
+		<li><a href="about/index.html">우리에 대하여</a></li>
 		<li style="color: #F90; font-weight: bold"><a href="orange.html">귤색
 				페이지</a></li>
 		<li style="color: #00F"><a href="blue.html">파란 페이지</a></li>
