--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<li><a href="rainbow.html">무지개 페이지</a></li>
 		<li style="color: #C00"><a href="red.html">빨간 페이지</a></li>
 		<li style="color: #FF0"><a href="yellow.html">노란 페이지</a></li>
+		<li style="color: #0C0"><a href="green.html">초록 페이지</a></li>
 	</ul>
 </body>
 </html>
