--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				페이지</a></li>
 		<li style="color: #00F"><a href="blue.html">파란 페이지</a></li>
 		<li><a href="rainbow.html">무지개 페이지</a></li>
+		<li style="color: #C00"><a href="red.html">빨간 페이지</a></li>
 	</ul>
 </body>
 </html>
