--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<li><a href="news-1.html">파란색이 유행이다</a></li>
 		<li><a href="rainbow.html">새로운무지개 </a></li>
 		<li><a href="news-2.html">붉은색의반란</a></li>
+		<li><a href="news-3.html">거품낀 불록체인</a></li>
 	</ul>
 	<h2>파도타기</h2>
 	<ul>
